Update navbar links

--- a/ElevenNote.WebMVC/ElevenNote.WebMVC.csproj
+++ b/ElevenNote.WebMVC/ElevenNote.WebMVC.csproj
@@ -11,6 +11,8 @@
     <None Remove="Microsoft.EntityFrameworkCore" />
     <None Remove="sql" />
     <None Remove="Views\Note\" />
+    <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
+    <None Remove="Swashbuckle.AspNetCore" />
   </ItemGroup>
   <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
@@ -24,6 +26,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
     <PackageReference Include="sql" Version="1.0.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.6" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
   <ItemGroup>
