--- a/ElevenNote.WebMVC/ElevenNote.WebMVC.csproj
+++ b/ElevenNote.WebMVC/ElevenNote.WebMVC.csproj
@@ -14,6 +14,7 @@
     <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
     <None Remove="Swashbuckle.AspNetCore" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
+    <None Remove="Views\Shared\DisplayTemplates\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
@@ -47,5 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Note\" />
+    <Folder Include="Views\Shared\DisplayTemplates\" />
   </ItemGroup>
 </Project>
